--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							</ul>
 						</footer>
 						<div>
-						<a href="https://cv.html" class="check" ><b>Curriculum Vitae</b></a>
+						<a href="cv.html" class="check" ><b>Curriculum Vitae</b></a>
 					
 					</div>
 					</section>
