--- a/cv.html
+++ b/cv.html
@@ -30,7 +30,7 @@
                 <li class="nav-item text-center">
                     <div class="h-100 d-flex flex-column mt-5 justify-content-center align-items-center">
                         <img src="images/avatar.jpg" class="img-fluid rounded-circle">
-                        <h2><a href="https://MD-Tanvir-Rouf-Shawon.github.io">MD. Tanvir Rouf Shawon</a></h2>
+                        <h2><a href="https://shawontanvir95.github.io/Portfolio/">MD. Tanvir Rouf Shawon</a></h2>
                         <h6>CS Student | Programmer</h6>
                         <div class="intro-email">
                             <div class="email-logo"><a href="#"><i class="fa fa-envelope"></i></a></div>
@@ -74,7 +74,7 @@
             <div class="col-md-3 col-lg-3 h-100 d-none d-block d-sm-block d-md-none">
                 <div class="h-100 d-flex flex-column mt-5 justify-content-center align-items-center">
                         <img src="images/avatar.jpg" class="img-fluid rounded-circle">
-                        <h2><a href="https://simantaturja.github.io">MD. Tanvir Rouf Shawon</a></h2>
+                        <h2><a href="https://shawontanvir95.github.io/Portfolio/">MD. Tanvir Rouf Shawon</a></h2>
                         <h6>CS Student | Programmer</h6>
                         <div class="intro-email">
                             <div class="email-logo"><a href="#"><i class="fa fa-envelope"></i></a></div>
@@ -103,7 +103,7 @@
                             <!-- <div class="d-inline"><a href="#"><i class="fa fa-briefcase"></i><span>Portfolio</span></a> -->
                             <!-- </div> -->
                             <!-- <div class="d-inline"><a href="#"><i class="fa fa-blog"></i><span>Blog</span></a></div> -->
-                            <div class = "mt-5" style = "color: black;"><h5><a href = "https://github.com/simantaturja/simantaturja.github.io/raw/master/resume/Resume_SIMANTA.pdf">Download PDF Resume</a></h5></div>
+                            <div class = "mt-5" style = "color: black;"><h5><a href = "">Download PDF Resume</a></h5></div>
                         </div>
 
                     </div>
@@ -112,7 +112,7 @@
             </div>
             <div class="col-md-12 col-lg-12 col-sm-12 w-100 h-100">
                 <nav class="navbar navbar-expand-lg navbar-light bg-light w-100 sticky-top">
-                    <a class="navbar-brand fa fa-home" href="https://simantaturja.github.io"></a>
+                    <a class="navbar-brand fa fa-home" href="https://shawontanvir95.github.io/Portfolio/"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
