--- a/cv.html
+++ b/cv.html
@@ -59,7 +59,7 @@
                             <!-- <div class="d-inline"><a href="#"><i class="fa fa-briefcase"></i><span>Portfolio</span></a> -->
                             <!-- </div> -->
                             <!-- <div class="d-inline"><a href="#"><i class="fa fa-blog"></i><span>Blog</span></a></div> -->
-                            <div class = "mt-5" style = "color: black;"><h5><a href = "https://drive.google.com/file/d/12e3ZDipyBEYYg57MjzPWsSYXJ_ZrRVY1/view">Download PDF Resume</a></h5></div>
+                            <div class = "mt-5" style = "color: black;"><h5><a href = "https://drive.google.com/file/d/12e3ZDipyBEYYg57MjzPWsSYXJ_ZrRVY1/view">Download PDF CV</a></h5></div>
                         </div>
 
                     </div>
@@ -103,7 +103,7 @@
                             <!-- <div class="d-inline"><a href="#"><i class="fa fa-briefcase"></i><span>Portfolio</span></a> -->
                             <!-- </div> -->
                             <!-- <div class="d-inline"><a href="#"><i class="fa fa-blog"></i><span>Blog</span></a></div> -->
-                            <div class = "mt-5" style = "color: black;"><h5><a href = "https://drive.google.com/file/d/12e3ZDipyBEYYg57MjzPWsSYXJ_ZrRVY1/view">Download PDF Resume</a></h5></div>
+                            <div class = "mt-5" style = "color: black;"><h5><a href = "https://drive.google.com/file/d/12e3ZDipyBEYYg57MjzPWsSYXJ_ZrRVY1/view">Download PDF CV</a></h5></div>
                         </div>
 
                     </div>
