--- a/cv.html
+++ b/cv.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume-MD Tanvir Rouf Shawon</title>
+    <title>CV-MD Tanvir Rouf Shawon</title>
 
     <link rel="stylesheet" href="assets/css/cv.css">
 
